--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       env:
-        API_KEY: ${{ secret.API_KEY }}
+        API_KEY: ${{ secrets.API_KEY }}
       run: |
         pytest
