--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest requests>=2.18.4
+        python -m pip install flake8 pytest pytest-cov requests>=2.18.4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -39,4 +39,8 @@ jobs:
       env:
         API_KEY: ${{ secrets.API_KEY }}
       run: |
-        pytest
+        pytest --cov=tokenterminal
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
