--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,6 +41,5 @@ jobs:
       run: |
         pytest --cov=tokenterminal
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      uses: actions/checkout@main
+      uses: codecov/codecov-action@v2
